kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ufsmgo-api-deployment
  namespace: ufsmgo
spec:
  selector:
    matchLabels:
      app: ufsmgo-api
  template:
    metadata:
      labels:
        app: ufsmgo-api
    spec:
      containers:
      - name: ufsmgo-api-container
        image: mrtrevisan/ufsmgo-api:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
