kubernetes/api-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ufsmgo-api-service
  namespace: ufsmgo
spec:
  selector:
    app: ufsmgo-api
  type: NodePort
  ports:
  - name: api
    port: 3000
