kubernetes/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ufsmgo-api-ingress
  namespace: ufsmgo
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    spec.ingressClassName: 'traefik'
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  tls:
    - hosts:
        - ufsmgo-api.az.trevisantec.com
      secretName: ufsmgo-api-tls
  rules:
    - host: ufsmgo-api.az.trevisantec.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ufsmgo-api-service
                port:
                  number: 3000
